# LAICA

./: .gitignore  Dockerfile  README.md
LAICA_enclc/: CMakeLists.txt  README.md  package.xml
LAICA_enclc/arduino/ads1256_encoder/: ads1256_encoder.ino
LAICA_enclc/config/: params.yaml
LAICA_enclc/launch/: sensors.launch
LAICA_enclc/msg/: EncoderData.msg  LoadCellData.msg  SwitchData.msg
LAICA_enclc/src/: arduino_sensor_pub.cpp
laica_bringup/: CMakeLists.txt  package.xml
laica_bringup/config/: LAICA_ws.code-workspace  keyboard_forward_stop_params.yaml  plot_bags.yaml  random_reference_speed_params.yaml  velocity_predictor_params.yaml
laica_bringup/launch/: bringup_LAICA.launch  bringup_LAICA_ignore_battery.launch  bringup_LAICA_keyboard_teleop.launch  bringup_LAICA_keyboard_teleop.launch.py  bringup_LAICA_random_reference.launch.py  go1_sensor_log.launch.py  live_admittance_plot.launch.py  live_plot.launch.py  plot_bags.launch.py
laica_bringup/scripts/: analyze_force_cmd_metrics.py  analyze_odom_segments.py  build_odom_dataset.py  keyboard_forward_stop.py  keyboard_teleop.py  live_plot_admittance.py  live_plot_sensors.py  plot_dataset_donut_summary.py  plot_rosbag_sensors.py  random_reference_speed.py  replot_all_rosbags_combined.sh  simulate_force_admittance.py
laica_bringup/src/: laica_velocity_predictor.cpp
rosbag_csv_exports/: README.md  convert_rosbag_all_topics.py
rosbag_csv_exports/06_03_1/: analysis_0_110_aligned.csv  bms_state.csv  cmd_vel.csv  encoder_data.csv  events_write_split.csv  load_cell_calibration_done.csv  load_cell_data.csv  manifest.json  rosout.csv  sensor_ranges.csv  switch_data.csv
rosbag_csv_exports/06_07_comfort_analysis/: 06_07_comfort_mode_summary.csv  06_07_comfort_trial_metrics.csv  06_07_force_threshold_long.csv  06_07_force_threshold_mode_summary.csv  06_07_force_threshold_scene_pair_comparison.csv  06_07_force_threshold_trial_metrics.csv  06_07_scene_pair_comparison.csv
rosbag_csv_exports/06_07_preferred_param_analysis/: 06_07_all_trial_metrics_with_params.csv  06_07_explicit_param_scene_summary.csv  06_07_group_summary_by_person_mode_param.csv  06_07_preferred_admittance_trials.csv
rosbag_csv_exports/06_07_reanalysis/: 06_07_ANDY_scene1_5_mode_summary.csv  06_07_ANDY_scene1_5_pair.csv  06_07_ANDY_scene1_5_trial_metrics.csv  06_07_JH_scene1_5_mode_summary.csv  06_07_JH_scene1_5_pair_comparison.csv  06_07_mode_summary.csv  06_07_sceneIntend_all_mode_summary.csv  06_07_sceneIntend_all_trial_metrics.csv  06_07_scene_pair_comparison.csv  06_07_threshold_long.csv  06_07_trial_metrics.csv  comfort_analysis_report.md  comfort_analysis_report_kr.md
rosbag_csv_exports/force_cmd_metrics_jh/: force_cmd_lagged_correlation.csv  force_metrics_grouped_summary.csv  force_variance.csv
