<?xml version="1.0"?>
<package format="3">
  <name>enc_lc</name>
  <version>0.1.0</version>
  <description>
    ROS nodes for ADS1256 24-bit 8-channel ADC (load cell) and
    EN25-Absolute magnetic rotary encoder.
  </description>
  <maintainer email="calmpingping@gmail.com">Junhyeong Doh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
