<?xml version="1.0"?>
<package format="3">
  <name>laica_bringup</name>
  <version>0.1.0</version>
  <description>ROS 2 bringup and integration nodes for LAICA.</description>
  <maintainer email="calmpingping@gmail.com">Junhyeong Doh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_ros</depend>
  <depend>enc_lc</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
